Updates to layout default for responsive-design purposes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@
 <body>
 <div id="pageContent" style="font-family: Georgia, Times, 'Times New Roman', serif">
 
-  <div style="display:flex; height:160px; padding-left: 2%">
+  <!--<div style="display:flex; height:160px; padding-left: 2%">-->
+  <div class="d-flex" style="height:160px; padding-left: 2%">
   <!--<div style="display:flex; height:160px; padding-left: 2%; background-image: linear-gradient(to bottom, #fdff80, #ffffe0)">-->
     <div id="logo" class="d-flex justify-content-center align-items-center" style="height:100%; width:15%">
       <img src="caeap-logo-sm.jpg" alt="CAEAP Logo" style="width:90%; height:90%; object-fit:contain"/>
@@ -22,7 +23,7 @@
   </div>
 
   <div class="btn-group d-flex" role="group" style="width: 100%; background-color: #1e7b1e">
-    <a href="/" class="btn" style="color: white">News</a>
+    <a href="news" class="btn" style="color: white">News</a>
     <a href="gethelp" class="btn" style="color: white">Get Help</a>
     <a href="givehelp" class="btn" style="color: white">Give Help</a>
     <a href="links" class="btn" style="color: white">Partners & Links</a>
