Updated nav element

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     </div>
   </div>
 
-  <div class="btn-group d-flex" role="group" style="width: 100%; background-color: #1e7b1e">
+  <nav class="btn-group d-flex" role="group" style="width: 100%; background-color: #1e7b1e">
     <a href="/" class="btn" style="color: white">News</a>
     <a href="gethelp" class="btn" style="color: white">Get Help</a>
     <a href="givehelp" class="btn" style="color: white">Give Help</a>
@@ -38,7 +38,7 @@
         <a class="dropdown-item" href="#" style="color: white">Contact</a>
       </div>
     </div>-->
-  </div>
+  </nav>
   <section> {{ content }} </section>
   <footer id="footer" class="footer" style="width: 100%; background-color: #bfbfbf; position: relative; clear: both; padding: 15px; text-align: center">
     Copyright 2020, Cloverleaf Area Ecumenical Assistance Program. All rights reserved
