--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,22 +8,22 @@
 <body>
 <div id="pageContent" style="font-family: Georgia, Times, 'Times New Roman', serif">
 
-  <!--<div style="display:flex; height:160px; padding-left: 2%">-->
-  <div class="row container-fluid" style="padding-left: 2%">
+  <!--<div style="display:flex; height:160px; padding-left: 2%">   for navbar old: btn-group d-flex, role="group", width: 100%;  -->
+  <div class="row container-fluid mt-2 mb-4 pl-2" >
     <div id="banner" class="col-md-10 container-fluid justify-content-center align-items-center">
-      <div style="padding-top: 2%">
-        <h1 style="color: #1e7b1e; text-align: center">
+      <div class="pl-4 pt-2 mt-2 mr-4">
+        <h1 style="color: #1e7b1e; text-align: left">
           Cloverleaf Area Ecumenical Assistance Program
         </h1>
-        <h4 style="font-style: italic; text-align: center">Serving our local communities since 1983</h4>
+        <h4 style="font-style: italic; text-align: left">Serving our local communities since 1983</h4>
       </div>
     </div>
     <div id="logo" class="d-flex order-sm-first col-md-2 justify-content-center align-items-center" style="height:100%; margin:0px">
-      <img src="caeap-logo-sm.jpg" alt="CAEAP Logo" style="width:150px; height:150px; object-fit:contain"/>
+      <img src="caeap-logo-sm.jpg" alt="CAEAP Logo" style="width:120px; height:120px; object-fit:contain"/>
     </div>
   </div>
 
-  <nav class="btn-group d-flex" role="group" style="width: 100%; background-color: #1e7b1e">
+  <nav class="navbar navbar-default navbar-collapse pl-4 pr-4" style="background-color: #1e7b1e">
     <a href="/" class="btn" style="color: white">News</a>
     <a href="gethelp" class="btn" style="color: white">Get Help</a>
     <a href="givehelp" class="btn" style="color: white">Give Help</a>
