Updated footer to be address and phone number rather than copyright

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
   </nav>
   <section> {{ content }} </section>
   <footer id="footer" class="footer" style="width: 100%; background-color: #bfbfbf; position: relative; clear: both; padding: 15px; text-align: center">
-    Copyright 2020, Cloverleaf Area Ecumenical Assistance Program. All rights reserved
+    Cloverleaf Area Ecumenical Assistance Program, 1 Grove Place, Pittsburgh, PA, 15236, (412) 207-1657
   </div>
 </div>
 
